force-app/main/default/objects/ZST_TCP_CUST_OUT__x/ZST_TCP_CUST_OUT__x.object-meta.xml
<CustomObject>
    <externalDataSource>TCP_STNSAP_SoldTo</externalDataSource>
    <externalName>ZST_TCP_CUST_OUTSet</externalName>
    <label>ZST_TCP_CUST_OUT</label>
    <pluralLabel>ZST_TCP_CUST_OUTSet</pluralLabel>
</CustomObject>