force-app/main/default/objects/ZST_TCP_CUST_OUT__x/fields/BILLING_BLK__c.field-meta.xml
<CustomField>
    <fullName>BILLING_BLK__c</fullName>
    <description>BILLING_BLK</description>
    <externalDeveloperName>BILLING_BLK</externalDeveloperName>
    <label>BILLING_BLK</label>
    <length>2</length>
    <type>Text</type>
</CustomField>