force-app/main/default/objects/ZST_TCP_CUST_OUT__x/fields/CITY__c.field-meta.xml
<CustomField>
    <fullName>CITY__c</fullName>
    <description>CITY</description>
    <externalDeveloperName>CITY</externalDeveloperName>
    <label>CITY</label>
    <length>40</length>
    <type>Text</type>
</CustomField>