force-app/main/default/objects/ZST_TCP_CUST_OUT__x/fields/DELETION_FLAG__c.field-meta.xml
<CustomField>
    <fullName>DELETION_FLAG__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DELETION_FLAG</description>
    <externalDeveloperName>DELETION_FLAG</externalDeveloperName>
    <label>DELETION_FLAG</label>
    <type>Checkbox</type>
</CustomField>