force-app/main/default/objects/ZST_TCP_CUST_OUT__x/fields/DELIVERY_BLK__c.field-meta.xml
<CustomField>
    <fullName>DELIVERY_BLK__c</fullName>
    <description>DELIVERY_BLK</description>
    <externalDeveloperName>DELIVERY_BLK</externalDeveloperName>
    <label>DELIVERY_BLK</label>
    <length>2</length>
    <type>Text</type>
</CustomField>