force-app/main/default/objects/ZST_TCP_CUST_OUT__x/fields/INCO1__c.field-meta.xml
<CustomField>
    <fullName>INCO1__c</fullName>
    <description>INCO1</description>
    <externalDeveloperName>INCO1</externalDeveloperName>
    <label>INCO1</label>
    <length>3</length>
    <type>Text</type>
</CustomField>