force-app/main/default/objects/ZST_TCP_CUST_OUT__x/fields/INCO2__c.field-meta.xml
<CustomField>
    <fullName>INCO2__c</fullName>
    <description>INCO2</description>
    <externalDeveloperName>INCO2</externalDeveloperName>
    <label>INCO2</label>
    <length>28</length>
    <type>Text</type>
</CustomField>