force-app/main/default/objects/ZST_TCP_CUST_OUT__x/fields/SHIP_COND__c.field-meta.xml
<CustomField>
    <fullName>SHIP_COND__c</fullName>
    <description>SHIP_COND</description>
    <externalDeveloperName>SHIP_COND</externalDeveloperName>
    <label>SHIP_COND</label>
    <length>2</length>
    <type>Text</type>
</CustomField>