force-app/main/default/objects/ZST_TCP_CUST_OUT__x/fields/STATE__c.field-meta.xml
<CustomField>
    <fullName>STATE__c</fullName>
    <description>STATE</description>
    <externalDeveloperName>STATE</externalDeveloperName>
    <label>STATE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>