force-app/main/default/objects/ZST_TCP_CUST_OUT__x/fields/STREET__c.field-meta.xml
<CustomField>
    <fullName>STREET__c</fullName>
    <description>STREET</description>
    <externalDeveloperName>STREET</externalDeveloperName>
    <label>STREET</label>
    <length>60</length>
    <type>Text</type>
</CustomField>