force-app/main/default/objects/ZST_TCP_CUST_OUT__x/fields/ZDATE__c.field-meta.xml
<CustomField>
    <fullName>ZDATE__c</fullName>
    <description>ZDATE</description>
    <externalDeveloperName>ZDATE</externalDeveloperName>
    <label>ZDATE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>